packages/build/tests/error/utils/fixtures/cancel/plugin.js
module.exports = {
  name: 'netlify-plugin-test',
  async onInit({
    utils: {
      error: { cancelBuild },
    },
  }) {
    cancelBuild('test')
  },
}
